[package]
name = "blockmod"
version = "0.1.0"
edition = "2021"

[features]
inspector = ["dep:bevy-inspector-egui"]

[dependencies]
bevy = "0.7.0"
bevy_asset_loader = "0.10.0"
bevy-inspector-egui = { version = "0.10.0", optional = true }
bytemuck = "1.9.1"
futures-lite = "1.12.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3